# okasaki

./: README.md  okasaki.cabal
src/: BST.hs  Chapter2.hs  Chapter3.hs  Exercise_2_1.hs  Exercise_2_2.hs  Exercise_2_3.hs  Exercise_2_4.hs  Heap.hs  LeftistHeap.hs  List.hs  RedBlackSet.hs  UnbalancedSet.hs
src/Chapter2/: Exercise_2_1.hs  Exercise_2_2.hs  Exercise_2_3.hs  Exercise_2_4.hs  Exercise_2_5.hs  Exercise_2_6.hs
src/Chapter3/: Exercise_3_1.hs  Exercise_3_2.hs  Exercise_3_3.hs  Exercise_3_4.hs  Exercise_3_9.hs
src/UnbalancedSet/: Common.hs  Lazy.hs  Strict.hs
