name:                okasaki
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/okasaki#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Exercise_2_1
                     , Exercise_2_2
                     , Exercise_2_3
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , hedgehog
                     , criterion
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DeriveGeneric
                     , MultiParamTypeClasses
                     , FlexibleInstances

-- executable okasaki-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , okasaki
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/okasaki
