name:                okasaki
version:             0.1.0.0
synopsis:            Solutions to "Purely Functional Data Structures"
description:         Please see README.md
homepage:            http://github.com/githubuser/okasaki#readme
license:             BSD3
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
copyright:           2018 Denis Redozubov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter2
                     , Chapter2.Exercise_2_1
                     , Chapter2.Exercise_2_2
                     , Chapter2.Exercise_2_3
                     , Chapter2.Exercise_2_4
                     , Chapter2.Exercise_2_5
                     , Chapter2.Exercise_2_6
                       Chapter3
                     , Chapter3.Exercise_3_1
                     , Chapter3.Exercise_3_2
                     , Chapter3.Exercise_3_3
                     , Chapter3.Exercise_3_4
                     , Heap
                     , LeftistHeap
                     , RedBlackSet
                     , UnbalancedSet
                     , UnbalancedSet.Common
                     , UnbalancedSet.Lazy
                     , UnbalancedSet.Strict
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , hedgehog
                     , criterion
  ghc-options:       -Wall
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses
                     , FlexibleInstances

-- executable okasaki-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , okasaki
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/okasaki
